--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
+    "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   }
